--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
     <div class="game-container">
       <!--? Title Container Div-->
       <div class="title">
-        <h1>Wordle</h1>
+        <h1>Wordle++</h1>
       </div>
       <!--? Message Div for showing Results if required-->
-      <div class="message-section"></div>
+      <!-- <div class="message-section"></div> -->
       <!--? The Word tiles container Div-->
       <div class="tile-section"></div>
       <!--? The keyBoard Div-->
       <div class="keys-section"></div>
     </div>
     <script src="app.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   </body>
 </html>
