Feature add phase 2

--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wordle</title>
+    <title>Wordle++ - Enhanced Wordle</title>
+    <link rel="icon" href="./assets/favicon.ico" type="image/icon type">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!--? Main Game Container (Conatins all the assets shown in the website) -->
-    <div class="game-container">
-      <!--? Title Container Div-->
+    <!--? Title Container Div-->
       <div class="title">
         <h1>Wordle++</h1>
       </div>
+    <!--? Main Game Container (Conatins all the assets shown in the website) -->
+    <div class="game-container">
       <!--? Message Div for showing Results if required-->
       <!-- <div class="message-section"></div> -->
       <!--? The Word tiles container Div-->
